# -otus-cpp-basics

./: 132  CMakeLists.txt  README.md  hello_world  hello_world.cpp  test  todo_move_me_out.cpp
03/: CMakeLists.txt  H.h  high_scores.cpp  main.cpp  random_value.cpp  random_value.h
